2019-05-21  Pablo Saavedra  <psaavedra@igalia.com>

        Undefined reference platformCloseFrontendPageAndWindow() linking against libWPEWebKit-1.0.so after r245536
        https://bugs.webkit.org/show_bug.cgi?id=198069

        Reviewed by Ross Kirsling.

        * UIProcess/RemoteWebInspectorProxy.cpp:

2019-05-21  Sihui Liu  <sihui_liu@apple.com>

        REGRESSION(r245540): ASSERTION FAILED: identifier.isNull() || RunLoop::isMain()
        https://bugs.webkit.org/show_bug.cgi?id=198074

        Reviewed by Youenn Fablet.

        * NetworkProcess/WebStorage/LocalStorageDatabaseTracker.cpp:
        (WebKit::LocalStorageDatabaseTracker::databasePath const):

2019-05-21  Antti Koivisto  <antti@apple.com>

        RTL/overflow scroll tests fail with async overflow enabled
        https://bugs.webkit.org/show_bug.cgi?id=196013
        <rdar://problem/49066649>

        Reviewed by Simon Fraser.

        Add missing scroll offset <-> scroll position conversions.

        * UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.h:
        * UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
        (WebKit::ScrollingTreeScrollingNodeDelegateIOS::repositionScrollingLayers):
        (WebKit::ScrollingTreeScrollingNodeDelegateIOS::scrollViewDidScroll):

2019-05-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [WPE] Add initial accessibility support using ATK
        https://bugs.webkit.org/show_bug.cgi?id=197413

        Reviewed by Michael Catanzaro.

        Rename WebKitWebViewBaseAccessible as WebKitWebViewAccessible and move it to glib removing its dependency on
        GTK. WPEView now implements get_accessible to return its associated WebKitWebViewAccessible.

        * PlatformWPE.cmake:
        * SourcesGTK.txt:
        * SourcesWPE.txt:
        * UIProcess/API/glib/WebKitWebViewAccessible.cpp: Added.
        (webkitWebViewAccessibleInitialize):
        (webkitWebViewAccessibleRefStateSet):