@@ -1,3 +1,14 @@
+2019-05-21  Jiewen Tan  <jiewen_tan@apple.com>
+
+        [WebAuthN] Make WebAuthN default on only on macOS
+        https://bugs.webkit.org/show_bug.cgi?id=198068
+        <rdar://problem/50971874>
+
+        Reviewed by Brent Fulgham.
+
+        * Shared/WebPreferences.yaml:
+        * Shared/WebPreferencesDefaultValues.h:
+
 2019-05-21  Pablo Saavedra  <psaavedra@igalia.com>
 
         Undefined reference platformCloseFrontendPageAndWindow() linking against libWPEWebKit-1.0.so after r245536
